[workspace]
resolver = "2"
members = [
        "rustemo",
        "rustemo-compiler",
        "tests",
        "examples/calculator",
        "examples/json",

        # docs
        "docs/src/parsing/expressions",
        # Tutorials
        "docs/src/tutorials/calculator/calculator1",
        "docs/src/tutorials/calculator/calculator2",
        "docs/src/tutorials/calculator/calculator3",
        "docs/src/tutorials/calculator/calculator4",
        "docs/src/tutorials/calculator/calculator5",
        # example
        "docs/src/readme_example",
]

[workspace.package]
repository = "https://github.com/igordejanovic/rustemo"
authors = ["Igor R. Dejanović <igor.dejanovic@gmail.com>"]
keywords = ["parser", "generator", "LR", "grammar"]
categories = ["parsing"]
license = "Apache-2.0 OR MIT"
version = "0.6.0"
edition = "2021"
rust-version = "1.74"
