[workspace]
resolver = "2"
members = [
        "rustemo",
        "rustemo-compiler",
        "tests",
        "examples/calculator",
        "examples/json",

        # docs
        "docs/src/parsing/expressions",
        # Tutorials
        "docs/src/tutorials/calculator/calculator1",
        "docs/src/tutorials/calculator/calculator2",
        "docs/src/tutorials/calculator/calculator3",
        "docs/src/tutorials/calculator/calculator4",
        "docs/src/tutorials/calculator/calculator5",
        # example
        "docs/src/readme_example",
]

[workspace.package]
repository = "https://github.com/igordejanovic/rustemo"
authors = ["Igor R. Dejanović <igor.dejanovic@gmail.com>"]
keywords = ["parser", "generator", "LR", "grammar"]
categories = ["parsing"]
license = "Apache-2.0 OR MIT"
version = "0.8.0"
edition = "2021"
rust-version = "1.82.0"

[workspace.dependencies]
petgraph = "0.6"
thiserror = "2"
itertools = { version = "0.10", default-features = false, features = ["use_std"] }
convert_case = { version = "0.5.0", default-features = false }
clap = { version = "4", features = ["derive"] }
quote = "1.0.20"
syn = { version = "1.0.98", features = ["parsing", "full", "printing"] }
proc-macro2 = "1.0.43"
prettyplease = "0.1.18"
codesnake = "0.2.1"

# Default string lexer uses regexes and once_cell to init regexes only once.
once_cell = "1"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
fancy-regex = "0.13.0"

serial_test = "3.2.0"

rustemo = { path = "./rustemo", version = "0.8"}
rustemo-compiler = { path = "./rustemo-compiler" }
