[package]
name = "rustemo-compiler"
description = "Rustemo compiler and development tools"
readme = "../README.md"

workspace = ".."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[[bin]]
name = "rcomp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10", default_features = false, features = ["use_std"] }
convert_case = { version = "0.5.0", default_features = false }
clap = { version = "3.2.13", features = ["derive"] }
quote = "1.0.20"
syn = { version = "1.0.98", features = ["parsing", "full", "printing"] }
proc-macro2 = "1.0.43"
prettyplease = "0.1.18"
colored = "2"

# Needed by rustemo generated parsers.
rustemo = { path = "../rustemo", version = "0.1"}

# Default string lexer uses regexes and once_cell to init regexes only once.
once_cell = { version = "1" }
regex = { version = "1", default_features = false, features = ["std", "unicode-perl"] }

[dev-dependencies]
criterion = "0.3.5"

[features]

# ----- Features used when developing Rustemo.
# Used for bootstrapping process.
bootstrap = []

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs-header.html" ]

