[package]
name = "rustemo-compiler"
description = "Rustemo compiler and development tools"
readme = "../README.md"

workspace = ".."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

exclude = [
    # Do not package test resources
    "**/*.rustemo",
    "**/*.expected",
    "**/*.ast",
    "**/*.err",
    "**/tests*",
]


[lib]
doctest = false

[[bin]]
name = "rcomp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
convert_case = { workspace = true }
clap = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
colored = { workspace = true }

# Needed by rustemo generated parsers.
rustemo = { workspace = true }

# Default string lexer uses regexes and once_cell to init regexes only once.
once_cell = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]

# ----- Features used when developing Rustemo.
# Used for bootstrapping process.
bootstrap = []

# KaTeX is not used at the moment. This setting breaks docs build at docs.rs
# [package.metadata.docs.rs]
# rustdoc-args = [ "--html-in-header", "docs-header.html" ]
