[package]
name = "rustemo"
description = "A LR/GLR parser generator"
readme = "../README.md"

workspace = ".."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
petgraph = { version = "0.6", optional = true }


[features]
default = ["glr"]
glr = ["dep:petgraph"]
