[package]
name = "rustemo"
description = "A LR/GLR parser generator"
readme = "../README.md"

workspace = ".."
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { workspace = true }
fancy-regex = { workspace = true }
once_cell = { workspace = true }
petgraph = { workspace = true, optional = true }
thiserror = { workspace = true }
codesnake = { workspace = true }
unicode-width = "0.2.1"
yansi = { version = "1", default-features = false }

[features]
default = ["glr", "tty"]
glr = ["dep:petgraph"]
tty = ["yansi/detect-tty", "yansi/detect-env"]
