[package]
name = "rustemo-tests"
description = "Integration tests for Rustemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustemo = { path = "../rustemo", version = "0.1"}
rustemo-rt = { path = "../rustemo-rt", version = "0.1" }
regex = { version = "1", default_features = false, features = ["std", "unicode-perl"] }
num_enum = { version = "0.5", default_features = false }

[build-dependencies]
rustemo = { path = "../rustemo", version = "0.1"}
