[package]
name = "rustemo-tests"
description = "Integration tests for Rustemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Needed by rustemo generated parsers.
rustemo = { path = "../rustemo", version = "0.1" }

# Default string lexer uses regexes and lazy_static to init regexes only once.
regex = { version = "1", default_features = false, features = ["std", "unicode-perl"] }
lazy_static = { version = "1.4.0"}

[dev-dependencies]
indoc = "2.0.0"
# For output_cmp for testing
rustemo-tools = { path = "../rustemo-tools", version = "0.1"}

[build-dependencies]
rustemo-tools = { path = "../rustemo-tools", version = "0.1"}
