[package]
name = "rustemo-tests"
description = "Integration tests for Rustemo"
build = "build.rs"

workspace = ".."
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Needed by rustemo generated parsers.
rustemo.workspace = true

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler.workspace = true
serial_test.workspace = true

[build-dependencies]
rustemo-compiler.workspace = true

[[test]]
name = "glr"
path = "src/glr/mod.rs"

[[test]]
name = "lr"
path = "src/lr.rs"

[features]

# Used for testing different table generator approaches
arrays = []
