[package]
name = "c"

workspace = "../.."
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Needed by rustemo generated parsers.
rustemo = { path = "../../rustemo" }

# Default string lexer uses regexes and once_cell to init regexes only once.
regex = { version = "1", default_features = false, features = ["std", "unicode-perl"] }
once_cell = "1"
colored = "2"

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { path = "../../rustemo-compiler" }

[build-dependencies]
rustemo-compiler = { path = "../../rustemo-compiler" }
