[package]
name = "calculator"

workspace = "../.."
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Needed by rustemo generated parsers.
rustemo = { path = "../../rustemo", version = "0.1" }

# Default string lexer uses regexes and once_cell to init regexes only once.
regex = { version = "1", default_features = false, features = ["std", "unicode-perl"] }
once_cell = "1"
colored = "2"

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { path = "../../rustemo-compiler", version = "0.1"}

[build-dependencies]
rustemo-compiler = { path = "../../rustemo-compiler", version = "0.1"}
