[package]
name = "clang"
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Needed by rustemo generated parsers.
rustemo = { workspace = true }

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { workspace = true }

[build-dependencies]
rustemo-compiler = { workspace = true }
