[package]
name = "json"

workspace = "../.."
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Needed by rustemo generated parsers.
rustemo = { workspace = true }

# Default string lexer uses regexes and once_cell to init regexes only once.
regex = { workspace = true }
once_cell = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { workspace = true }

[build-dependencies]
rustemo-compiler = { workspace = true }

[features]

# Used for testing different table generator approaches
arrays = []
