[package]
name = "readme_example"
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
regex = { version = "1.7.1", default-features = false, features = ["std", "unicode-perl"] }
colored = "2"
# A relative path to rustemo crate is used here for usage in the rustemo project tree.
# In your projects you should just specify the version.
rustemo = { version = "0.4.0", path = "../../../rustemo" }
# ANCHOR_END: tutorial
