[package]
name = "expressions"
version = "0.1.0"
authors = ["Igor Dejanović <igor.dejanovic@gmail.com>"]
build = "build.rs"
edition = "2021"
workspace = "../../../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustemo = { path = "../../../../rustemo" }

# Default string lexer uses regexes and once_cell to init regexes only once.
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
once_cell = "1"
colored = "2"

[build-dependencies]
rustemo-compiler = { path = "../../../../rustemo-compiler" }
