[package]
name = "expressions"
version = "0.1.0"
authors = ["Igor Dejanović <igor.dejanovic@gmail.com>"]
build = "build.rs"
edition = "2021"
workspace = "../../../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustemo = { path = "../../../../rustemo" }

[build-dependencies]
rustemo-compiler = { path = "../../../../rustemo-compiler" }
