# ANCHOR: tutorial
[package]
name = "calculator1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
regex = { version = "1.7.1", default-features = false, features = ["std", "unicode-perl"] }
colored = "2"
# A relative path to rustemo crate is used here for usage in the rustemo project tree.
# In your projects you should just specify the version.
rustemo = { version = "0.3.0", path = "../../../../../rustemo" }
# ANCHOR_END: tutorial

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { path = "../../../../../rustemo-compiler" }
