[package]
name = "calculator2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
regex = { version = "1.7.1", default-features = false, features = ["std", "unicode-perl"] }
rustemo = { version = "0.1.0", path = "../../../../../rustemo" }

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { path = "../../../../../rustemo-compiler" }
