[package]
name = "calculator3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
colored = { workspace = true }
rustemo = { workspace = true }

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { workspace = true }
