[package]
name = "calculator4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustemo = { workspace = true }

[dev-dependencies]
# For output_cmp for testing
rustemo-compiler = { workspace = true }
